have everything under control will make final push to the finish

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -9,6 +9,14 @@
 </head>
 <body>
     
+    <nav class="nav nav-pills nav-justified">
+  <a class="nav-item nav-link active" href="/">Pleague</a>
+  <a class="nav-item nav-link" href="/lakers">Lakers</a>
+  <a class="nav-item nav-link" href="/hawks">Hawks</a>
+  <a class="nav-item nav-link" href="/spurs">Spurs</a>
+  <a class="nav-item nav-link" href="/knicks">Knicks</a>
+
+</nav>
 
     {{{body}}}
 </body>
