--- a/views/team/index.hbs
+++ b/views/team/index.hbs
@@ -1,6 +1,7 @@
 
 {{#each teamHBS}}
-<div class="card" style="width: 18rem;">
+
+<div class="card mt-5 ml-5 d-inline-flex" style="width: 18rem;">
   <img class="card-img-top" src="{{img}}" alt="Card image cap">
   <div class="card-body">
     <h5 class="card-title">{{name}}</h5>
