--- a/views/hawks/index.hbs
+++ b/views/hawks/index.hbs
@@ -7,7 +7,7 @@
 
 {{#each hawksHBS}}
 
-<div class="card" style="width: 18rem;">
+<div class="card mt-5 ml-5 d-inline-flex" style="width: 18rem;">
   <img class="card-img-top" src="{{img}}" alt="Card image cap">
   <div class="card-body">
     <h5 class="card-title">{{name}}</h5>
