trying to get the post route to work

--- a/views/hawks/index.hbs
+++ b/views/hawks/index.hbs
@@ -18,3 +18,27 @@
 </div>
 
 {{/each}}
+
+{{!-- form container --}}
+
+  <div class="mt-5 ml-5">
+
+<form action="/">
+
+<label for=""> Name
+  <input type="text">
+</label>
+
+<label for=""> Number
+  <input type="text">
+</label>
+
+<label for=""> img
+  <input type="text">
+</label>
+</form>
+
+<a href="/hawks/{{_id}}">
+<button>Add me</button>
+</a>
+</div>
