restful routing smh

--- a/views/hawks/index.hbs
+++ b/views/hawks/index.hbs
@@ -23,7 +23,7 @@
 
   <div class="mt-5 ml-5">
 
-<form action="/post">
+<form method="post" action="/hawks">
 
 <label for=""> Name
   <input type="text">
@@ -38,7 +38,6 @@
 </label>
 </form>
 
-<a href="/hawks/{{_id}}">
 <button>Add me</button>
-</a>
+
 </div>
