added full routes for hawks model

--- a/views/hawks/index.hbs
+++ b/views/hawks/index.hbs
@@ -13,7 +13,7 @@
     <h5 class="card-title">{{name}}</h5>
     <h5 class="card-title">{{team}}</h5>
     <p class="card-text">{{number}}</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
+    <a href="/{{_id}}" class="btn btn-primary">Go somewhere</a>
   </div>
 </div>
 
@@ -38,6 +38,6 @@
 </label>
 </form>
 
-<button>Add me</button>
+<button type="submit">Add me</button>
 
 </div>
