--- a/views/hawks/index.hbs
+++ b/views/hawks/index.hbs
@@ -1,3 +1,7 @@
+<style type="text/css">
+   body { background:url('https://cdn.nba.net/nba-drupal-prod/styles/landscape/s3/2017-04/20170422_hawks_0.jpg?itok=0a5fURJd') !important; } /* Adding !important forces the browser to overwrite the default style applied by Bootstrap */
+</style>
+
 
 <div class="jumbotron mt-5">
   <h1 class="display-4">Atlanta Hawks</h1>
