--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -9,7 +9,7 @@
 </head>
 <body>
     
-    <nav class="nav nav-pills nav-justified">
+    <nav class="nav nav-pills nav-justified bg-danger">
   <a class="nav-item nav-link active" href="/">Pleague</a>
   <a class="nav-item nav-link" href="/lakers">Lakers</a>
   <a class="nav-item nav-link" href="/hawks">Hawks</a>
