added styling to player card show page

--- a/views/hawks/show.hbs
+++ b/views/hawks/show.hbs
@@ -2,15 +2,15 @@
 
 <main>
 
-	<h2>You are viewing:
+	<h2 class="mx-auto">Player Card
 
 		{{hawksHBS.name}}
 
 	</h2>
 
-	<a href="/">Return to Home Page</a>
+	<a href="/">Return to Pleague</a>
 
-	<div class="hawk-container-show">
+	<div class="hawk-container-show ml-5 d-flex justify-content-around">
 		<h2 id="hawk-name">
 
 				{{hawksHBS.name}}
@@ -20,7 +20,7 @@
 				<img src="{{hawksHBS.img}}" />
 
 		<br>
-		<h3>Description:</h3>
+		<h3>Team:</h3>
 			<p>
 
 				{{hawksHBS.team}}
