--- a/views/knicks/show.hbs
+++ b/views/knicks/show.hbs
@@ -1,14 +1,14 @@
 <main>
 
-	<h2>You are viewing:
+	<h2>
 
 		{{knicksHBS.name}}
 
 	</h2>
 
-	<a href="/">Return to Home Page</a>
+	<a href="/">Return to Pleague</a>
 
-	<div class="donut-container-show">
+	<div class="donut-container-show ml-5 d-flex justify-content-around">
 		<h2 id="donut-name">
 
 				{{knicksHBS.name}}
@@ -18,7 +18,7 @@
 				<img src="{{knicksHBS.img}}" />
 
 		<br>
-		<h3>Description:</h3>
+		<h3>Team:</h3>
 			<p>
 
 				{{knicksHBS.team}}
