--- a/views/spurs/show.hbs
+++ b/views/spurs/show.hbs
@@ -2,15 +2,15 @@
 
 <main>
 
-	<h2>You are viewing:
+	<h2>
 
 		{{spursHBS.name}}
 
 	</h2>
 
-	<a href="/">Return to Home Page</a>
+	<a href="/">Return to Pleague</a>
 
-	<div class="spur-container-show">
+	<div class="spur-container-show ml-5 d-flex justify-content-around">
 		<h2 id="spur-name">
 
 				{{spursHBS.name}}
@@ -20,7 +20,7 @@
 				<img src="{{spursHBS.img}}" />
 
 		<br>
-		<h3>Description:</h3>
+		<h3>Team:</h3>
 			<p>
 
 				{{spursHBS.team}}
