--- a/views/lakers/show.hbs
+++ b/views/lakers/show.hbs
@@ -2,15 +2,15 @@
 
 <main>
 
-	<h2>You are viewing:
+	<h2>
 
 		{{lakersHBS.name}}
 
 	</h2>
 
-	<a href="/">Return to Home Page</a>
+	<a href="/">Return to Pleague</a>
 
-	<div class="laker-container-show">
+	<div class="laker-container-show ml-5 d-flex justify-content-around">
 		<h2 id="laker-name">
 
 				{{lakersHBS.name}}
@@ -20,7 +20,7 @@
 				<img src="{{lakersHBS.img}}" />
 
 		<br>
-		<h3>Description:</h3>
+		<h3>Team:</h3>
 			<p>
 
 				{{lakersHBS.team}}
