final commit of project two

--- a/views/hawks/index.hbs
+++ b/views/hawks/index.hbs
@@ -42,7 +42,10 @@
 </label>
 
 <button type="submit">add</button>
+
+
 </form>
 
-
-
+<a href="/hawks/edit/{{hawksHBS_.id}}">
+<button type="submit">edit</button>
+</a>
